dynamic href, id for href

--- a/public/index.html
+++ b/public/index.html
@@ -1,10 +1,9 @@
 <html>
     <head>
         <script src="vkapi.js"></script>
-
     </head>
     <body>
         <button>vk auth</button>
-        <a href="https://oauth.vk.com/authorize?client_id=5929041&redirect_uri=http://localhost:8080/auth">vk.com</a>
+        <a id="href" href="https://oauth.vk.com/authorize?redirect_uri=http://localhost:8080/auth&client_id=">vk.com</a>
     </body>
 </html>
