renamed to login

--- a/public/login.html
+++ b/public/login.html
@@ -4,6 +4,6 @@
     </head>
     <body>
         <button>vk auth</button>
-        <a id="href" href="https://oauth.vk.com/authorize?redirect_uri=http://localhost:8080/auth&client_id=">vk.com</a>
+        <a id="href">vk.com</a>
     </body>
 </html>
