changed urls to js

--- a/public/home.html
+++ b/public/home.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <script src="vkapi.js"></script>
+        <script src="js/home.js"></script>
     </head>
     <body>
         <button onclick="getLikes()">get Likes</button>
