--- a/public/login.html
+++ b/public/login.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <script src="vkapi.js"></script>
+        <script src="js/login.js"></script>
     </head>
     <body>
         <button>vk auth</button>
