--- a/public/home.html
+++ b/public/home.html
@@ -5,7 +5,8 @@
     <body>
         <button onclick="getLikes()">get Likes</button>
         <button onclick="getWallPosts()">get wall posts</button>
-        <h6 id="methodName"></h6>
+        <button onclick="getViewsCounter()">get views counter</button>
+        <h4 id="methodName"></h4>
         <p id="methodBody"></p>
     </body>
 </html>
